HashSet used to create Set and performed basic operations