@@ -2,7 +2,7 @@ package List;
 
 public class ArrayList {
     public static void main(String[] args){
-        java.util.ArrayList<Integer> list1 = new java.util.ArrayList<Integer>();
+        java.util.ArrayList<Integer> list1 = new java.util.ArrayList<>();
 
         //adding new element to list1
         list1.add(6);
@@ -10,16 +10,14 @@ public class ArrayList {
         list1.add(8);
         list1.add(9);
 
-        //accessing each element by its index
-        for(int i=0;i<list1.size();i++){
-            System.out.print(list1.get(i)+" ");
+        for (Integer integer : list1) {
+            System.out.print(integer + " ");
         }
-        list1.remove(0);
+        list1.removeFirst();
 
         System.out.println();
-        //accessing each element by its index
-        for(int i=0;i<list1.size();i++) {
-            System.out.print(list1.get(i) + " ");
+        for (Integer integer : list1) {
+            System.out.print(integer + " ");
         }
     }
 }
